# mathtoolbox

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  MathToolboxConfig.cmake.in  README.md  UpdatingDocs.md  _config.yml  index.html  mkdocs.yml  search.html  setup.py  sitemap.xml
.github/workflows/: build-test.yml  ccpp.yml  macos-python.yml  macos.yml  ubuntu-16.04.yml  ubuntu-18.04.yml  ubuntu-python.yml  ubuntu.yml
acquisition-functions/: index.html
backtracking-line-search/: index.html
bayesian-optimization/: index.html
bfgs/: index.html
classical-mds/: index.html
constants/: index.html
data-normalization/: index.html
docs/: acquisition-functions.md  backtracking-line-search.md  bayesian-optimization.md  bfgs.md  classical-mds.md  constants.md  data-normalization.md  distributions.md  gaussian-process-regression.md  gradient-descent.md  index.md  kernel-functions.md  l-bfgs.md  log-determinant.md  matrix-inversion.md  metric-mds.md  probability-distributions.md  rbf-interpolation.md  som.md  strong-wolfe-conditions-line-search.md
examples/: CMakeLists.txt
examples/acquisition-function/: CMakeLists.txt  main.cpp
examples/bayesian-optimization/: CMakeLists.txt  main-visualize.py  main.cpp
examples/bfgs/: CMakeLists.txt  main.cpp
examples/classical-mds/: CMakeLists.txt  main.cpp
examples/distributions/: CMakeLists.txt  main.cpp
examples/gaussian-process-regression/: CMakeLists.txt  main.cpp
examples/gradient-descent/: CMakeLists.txt  main.cpp
examples/l-bfgs/: CMakeLists.txt  main.cpp
examples/log-determinant/: CMakeLists.txt  main.cpp
examples/matrix-inversion/: CMakeLists.txt  main.cpp
examples/metric-mds/: CMakeLists.txt  main.cpp
examples/probability-distributions/: CMakeLists.txt  main.cpp
examples/python-bindings/: bayesian-optimization.py  classical-mds-image.py  classical-mds.py
examples/rbf-interpolation/: CMakeLists.txt  main.cpp
examples/som/: CMakeLists.txt  main.cpp
gaussian-process-regression/: index.html
gradient-descent/: index.html
include/mathtoolbox/: acquisition-functions.hpp  backtracking-line-search.hpp  bayesian-optimization.hpp  bfgs.hpp  classical-mds.hpp  constants.hpp  data-normalization.hpp  distributions.hpp  gaussian-process-regression.hpp  gradient-descent.hpp  kernel-functions.hpp  l-bfgs.hpp  log-determinant.hpp  matrix-inversion.hpp  numerical-optimization.hpp  probability-distributions.hpp  rbf-interpolation.hpp  som.hpp  strong-wolfe-conditions-line-search.hpp
kernel-functions/: index.html
l-bfgs/: index.html
log-determinant/: index.html
mathtoolbox/: gaussian-process-regression.cpp  gaussian-process-regression.hpp  metric-mds.hpp  rbf-interpolation.cpp  rbf-interpolation.hpp
matrix-inversion/: index.html
probability-distributions/: index.html
python-examples/: bayesian-optimization.py  classical-mds-image.py  classical-mds.py  rbf-interpolation-comparison.py  rbf-interpolation-exact.py  rbf-interpolation-polynomial.py  rbf-interpolation.py  som-image-1d.py  som-image.py
rbf-interpolation/: index.html
search/: search_index.json
som/: index.html
src/: acquisition-functions.cpp  bayesian-optimization.cpp  bfgs.cpp  classical-mds.cpp  distributions.cpp  gaussian-process-regression.cpp  gradient-descent.cpp  kernel-functions.cpp  l-bfgs.cpp  log-determinant.cpp  matrix-inversion.cpp  probability-distributions.cpp  python-bindings.cpp  rbf-interpolation.cpp  som.cpp
src/pybind/: python-bindings.cpp
strong-wolfe-conditions-line-search/: index.html
